--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -162,12 +162,12 @@
         },
         {
           "command": "fx-extension.deployManifestFromCtxMenu",
-          "when": "fx-extension.isDeployManifestEnabled && resourceFilename =~ /^manifest.(local|remote).template.json$/ && !fx-extension.isConfigUnifyEnabled",
+          "when": "resourceFilename =~ /^manifest.(local|remote).template.json$/ && !fx-extension.isConfigUnifyEnabled",
           "group": "deploy@0"
         },
         {
           "command": "fx-extension.deployManifestFromCtxMenu",
-          "when": "fx-extension.isDeployManifestEnabled && resourceFilename == manifest.template.json && fx-extension.isConfigUnifyEnabled",
+          "when": "resourceFilename == manifest.template.json && fx-extension.isConfigUnifyEnabled",
           "group": "deploy@0"
         }
       ],
