--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -171,7 +171,7 @@
       "explorer/context": [
         {
           "command": "fx-extension.deployAadAppManifestFromCtxMenu",
-          "when": "resourceFilename == aad.template.json && fx-extension.isAadManifestEnabled && !fx-extension.isSPFx",
+          "when": "resourceFilename == aad.template.json && fx-extension.isAadManifestEnabled",
           "group": "deploy@0"
         },
         {
@@ -438,12 +438,12 @@
       {
         "command": "fx-extension.deployAadAppManifest",
         "title": "%teamstoolkit.commands.deployAadAppManifest.title%",
-        "enablement": "fx-extension.isAadManifestEnabled && !fx-extension.isSPFx"
+        "enablement": "fx-extension.isAadManifestEnabled"
       },
       {
         "command": "fx-extension.deployAadAppManifestFromCtxMenu",
         "title": "%teamstoolkit.commands.deployAadAppManifestFromCtxMenu.title%",
-        "enablement": "fx-extension.isAadManifestEnabled && !fx-extension.isSPFx"
+        "enablement": "fx-extension.isAadManifestEnabled"
       },
       {
         "command": "fx-extension.signOut",
