fix: hide deploy aad manifest command when aad is not enabled

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -157,7 +157,7 @@
       "explorer/context": [
         {
           "command": "fx-extension.deployAadAppManifestFromCtxMenu",
-          "when": "resourceFilename == aad.template.json && !fx-extension.isSPFx",
+          "when": "resourceFilename == aad.template.json && && fx-extension.isAadManifestEnabled",
           "group": "deploy@0"
         },
         {
@@ -523,7 +523,7 @@
       {
         "command": "fx-extension.deployAadAppManifest",
         "title": "%teamstoolkit.commands.deployAadAppManifest.title%",
-        "enablement": "fx-extension.isTeamsFx && !fx-extension.isSPFx",
+        "enablement": "fx-extension.isTeamsFx && fx-extension.isAadManifestEnabled",
         "category": "Teams"
       },
       {
@@ -594,7 +594,7 @@
       {
         "command": "fx-extension.deployAadAppManifestFromCtxMenu",
         "title": "%teamstoolkit.commands.deployAadAppManifestFromCtxMenu.title%",
-        "enablement": "!fx-extension.isSPFx"
+        "enablement": "fx-extension.isAadManifestEnabled"
       },
       {
         "command": "fx-extension.deployManifestFromCtxMenu",
