--- a/templates/scenarios/common/office-addin/teamsapp.yml
+++ b/templates/scenarios/common/office-addin/teamsapp.yml
@@ -25,9 +25,11 @@ provision:
 # Triggered when 'teamsfx deploy' is executed
 deploy:
   - uses: cli/runNpmCommand # Run npm command
+    name: install dependencies
     with:
       args: install
   - uses: cli/runNpmCommand # Run npm command
+    name: build app
     with:
       args: run build --if-present
   - uses: azureStorage/deploy # Deploy bits to Azure Storage Static Website
