--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsNonSsoTab/expectedResult/ts.app.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsNonSsoTab/expectedResult/ts.app.yml
@@ -24,10 +24,12 @@ provision:
 
 deploy:
   - uses: cli/runNpmCommand # Run npm command
+    name: install tab dependencies
     with:
       workingDirectory: tabs
       args: install
   - uses: cli/runNpmCommand # Run npm command
+    name: build tab app
     with:
       workingDirectory: tabs
       args: run build --if-present
