--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsSsoTab/expectedResult/ts.app.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsSsoTab/expectedResult/ts.app.yml
@@ -24,10 +24,12 @@ provision:
 
 deploy:
   - uses: cli/runNpmCommand # Run npm command
+    name: install tab dependencies
     with:
       workingDirectory: tabs
       args: install
   - uses: cli/runNpmCommand # Run npm command
+    name: build tab app
     env:
       REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
       REACT_APP_START_LOGIN_PAGE_URL: ${{PROVISIONOUTPUT__AZURESTORAGETABOUTPUT__ENDPOINT}}/auth-start.html
