--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsWebappBotId/expectedResult/js.app.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsWebappBotId/expectedResult/js.app.yml
@@ -24,6 +24,7 @@ provision:
 
 deploy:
   - uses: cli/runNpmCommand # Run npm command
+    name: install bot dependencies
     with:
       workingDirectory: bot
       args: install
