feat: add web part command in command palette

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -807,6 +807,10 @@
       {
         "command": "fx-extension.openSurvey",
         "title": "%teamstoolkit.commandsTreeViewProvider.openSurveyTitle%"
+      },
+      {
+        "command": "fx-extension.addWebpart",
+        "title": "%teamstoolkit.commmands.addWebpart.title%"
       }
     ],
     "taskDefinitions": [
