chore: only show add web part in v3

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -810,7 +810,9 @@
       },
       {
         "command": "fx-extension.addWebpart",
-        "title": "%teamstoolkit.commmands.addWebpart.title%"
+        "title": "%teamstoolkit.commmands.addWebpart.title%",
+        "enablement": "fx-extension.isTeamsFx && isWorkspaceTrusted && fx-extension.isV3Enabled && !fx-extension.commandLocked",
+        "category": "Teams"
       }
     ],
     "taskDefinitions": [
