--- a/templates/scenarios/js/non-sso-tab-default-bot/.vscode/tasks.json
+++ b/templates/scenarios/js/non-sso-tab-default-bot/.vscode/tasks.json
@@ -35,22 +35,22 @@
             }
         },
         {
-            // Start the local tunnel service to forward public ngrok URL to local port and inspect traffic.
-            // See https://aka.ms/teamsfx-tasks/local-tunnel for the detailed args definitions,
-            // as well as samples to:
-            //   - use your own ngrok command / configuration / binary
-            //   - use your own tunnel solution
-            //   - provide alternatives if ngrok does not work on your dev machine
+            // Start the local tunnel service to forward public URL to local port and inspect traffic.
+            // See https://aka.ms/teamsfx-tasks/local-tunnel for the detailed args definitions.
             "label": "Start local tunnel",
             "type": "teamsfx",
             "command": "debug-start-local-tunnel",
             "args": {
-                "ngrokArgs": "http 3978 --log=stdout --log-format=logfmt",
+                "type": "dev-tunnel",
+                "port": 3978,
+                "protocol": "http",
+                "access": "public",
                 "env": "local",
                 "output": {
                     // output to .env.local
                     "endpoint": "BOT_ENDPOINT", // output tunnel endpoint as BOT_ENDPOINT
-                    "domain": "BOT_DOMAIN" // output tunnel domain as BOT_DOMAIN
+                    "domain": "BOT_DOMAIN", // output tunnel domain as BOT_DOMAIN
+                    "id": "DEV_TUNNEL_ID" // output dev tunnel id as DEV_TUNNEL_ID
                 }
             },
             "isBackground": true,
