--- a/templates/scenarios/common/init-debug-vs-tab/teamsapp.local.yml
+++ b/templates/scenarios/common/init-debug-vs-tab/teamsapp.local.yml
@@ -3,7 +3,7 @@
 version: 1.0.0
 
 
-registerApp:
+provision:
   - uses: file/updateEnv # Generate env to .env file
     with:
       envs:
@@ -16,7 +16,6 @@ registerApp:
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-configureApp:
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
