--- a/templates/scenarios/common/init-debug-vsc-spfx-tab/teamsapp.local.yml
+++ b/templates/scenarios/common/init-debug-vsc-spfx-tab/teamsapp.local.yml
@@ -2,14 +2,13 @@
 # Visit https://aka.ms/teamsfx-actions for details on actions
 version: 1.0.0
 
-registerApp:
+provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: spfx-tab # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
-
-configureApp:
+    
   - uses: teamsApp/validate # This action is currently skipped, will be updated in the future version.
     with:
       manifestPath: ./appPackage/manifest.template.local.json # Path to manifest template
