--- a/templates/scenarios/common/init-debug-vsc-tab/teamsapp.local.yml
+++ b/templates/scenarios/common/init-debug-vsc-tab/teamsapp.local.yml
@@ -2,14 +2,12 @@
 # Visit https://aka.ms/teamsfx-actions for details on actions
 version: 1.0.0
 
-registerApp:
+provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: tab # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
-
-configureApp:
   - uses: file/updateEnv # Generate env to .env file
     with:
       envs:
