--- a/templates/scenarios/common/init-infra-vsc-spfx-tab/teamsapp.yml
+++ b/templates/scenarios/common/init-infra-vsc-spfx-tab/teamsapp.yml
@@ -25,15 +25,12 @@ deploy:
 
 
 # Triggered when 'teamsfx provision' is executed
-registerApp:
+provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
-
-# Triggered when 'teamsfx provision' is executed
-configureApp:
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
