chore: test sdk e2e rerun

--- a/.github/workflows/sdk-e2e-test.yml
+++ b/.github/workflows/sdk-e2e-test.yml
@@ -42,7 +42,7 @@ jobs:
         if: ${{ always() }}
         working-directory: packages/sdk
         run: |
-          npm run test:e2e:node
+          exit 1
 
       - name: run test - browser
         if: ${{ always() }}
@@ -134,7 +134,8 @@ jobs:
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Rerun
-        if: ${{ github.event_name == 'schedule' && failure() && github.run_attempt < 5 }}
+        # if: ${{ github.event_name == 'schedule' && failure() && github.run_attempt < 5 }}
+        if: ${{ failure() && github.run_attempt < 5 }}
         runs-on: ubuntu-latest
         run: |
           curl \
