--- a/.github/workflows/sdk-e2e-test.yml
+++ b/.github/workflows/sdk-e2e-test.yml
@@ -143,7 +143,7 @@ jobs:
            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
            -H "X-GitHub-Api-Version: 2022-11-28" \
            https://api.github.com/repos/${{ github.repository }}/actions/workflows/rerun.yml/dispatches \
-           -d '{"ref":"'${GITHUB_REF##*/}'","inputs":{"run_id":"${{ github.run_id }}", "max_attempts":"5"}}'
+           -d '{"ref":"'${GITHUB_REF#refs/heads/}'","inputs":{"run_id":"${{ github.run_id }}", "max_attempts":"5"}}'
 
       - name: Report result
         uses: satak/webrequest-action@master
