--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -319,6 +319,11 @@
           "group": "inline@3"
         },
         {
+          "command": "fx-extension.manageCollaborator",
+          "when": "view == teamsfx-environment && viewItem =~ /environment/ && fx-extension.isV3Enabled",
+          "group": "inline@3"
+        },
+        {
           "command": "fx-extension.openSubscriptionInPortal",
           "when": "view == teamsfx-environment && viewItem == openSubscriptionInPortal",
           "group": "inline@3"
@@ -399,6 +404,10 @@
         },
         {
           "command": "fx-extension.listCollaborator",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.manageCollaborator",
           "when": "false"
         },
         {
@@ -693,8 +702,8 @@
       {
         "command": "fx-extension.manageCollaborator",
         "title": "%teamstoolkit.commands.manageCollaborator.title%",
-        "enablement": "fx-extension.isV3Enabled && !fx-extension.commandLocked",
-        "category": "Teams"
+        "enablement": "fx-extension.isV3Enabled",
+        "icon": "$(organization)"
       },
       {
         "command": "fx-extension.localdebug",
