--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -40,6 +40,7 @@
     "test:provisionUtil": "nyc mocha \"tests/component/provisionUtils.test.ts\"",
     "test:env": "nyc mocha \"tests/component/envUtil.test.ts\"",
     "test:generator": "nyc mocha \"tests/component/generator/*.test.ts\"",
+    "test:officeAddinGenerator": "nyc mocha \"tests/component/generator/officeAddinGenerator.test.ts\"",
     "test:scriptDriver": "nyc mocha \"tests/component/driver/script/scriptDriver.test.ts\"",
     "test:rghelper": "nyc mocha \"tests/component/resourceGroupHelper.test.ts\"",
     "clean": "rm -rf build",
