--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -875,7 +875,7 @@
                     "items": {
                       "type": "number"
                     },
-                    "description": "%teamstoolkit.taskDefinitions.args.ports.title%"
+                    "description": "%teamstoolkit.taskDefinitions.args.portOccupancy.title%"
                   }
                 },
                 "if": {
@@ -904,9 +904,15 @@
               {
                 "type": "object",
                 "required": [
+                  "type",
                   "ngrokArgs"
                 ],
                 "properties": {
+                  "type": {
+                    "type": "string",
+                    "description": "%teamstoolkit.taskDefinitions.args.type.title%",
+                    "const": "ngrok"
+                  },
                   "ngrokArgs": {
                     "oneOf": [
                       {
@@ -956,6 +962,75 @@
                       "endpoint": {
                         "type": "string",
                         "description": "%teamstoolkit.taskDefinitions.args.output.endpoint.title%"
+                      }
+                    }
+                  }
+                },
+                "additionalProperties": false
+              },
+              {
+                "type": "object",
+                "required": [
+                  "type",
+                  "port",
+                  "protocol"
+                ],
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "description": "%teamstoolkit.taskDefinitions.args.type.title%",
+                    "const": "dev-tunnel"
+                  },
+                  "port": {
+                    "type": "integer",
+                    "description": "%teamstoolkit.taskDefinitions.args.port.title%"
+                  },
+                  "protocol": {
+                    "type": "string",
+                    "description": "%teamstoolkit.taskDefinitions.args.protocol.title%",                    
+                    "oneOf": [
+                      {
+                        "const": "http"
+                      },
+                      {
+                        "const": "https"
+                      }
+                    ]
+                  },
+                  "access": {
+                    "type": "string",
+                    "description": "%teamstoolkit.taskDefinitions.args.access.title%",                    
+                    "oneOf": [
+                      {
+                        "const": "public"
+                      }
+                    ]
+                  },
+                  "env": {
+                    "type": "string",
+                    "description": "%teamstoolkit.taskDefinitions.args.env.title%",
+                    "anyOf": [
+                      {
+                        "const": "local"
+                      },
+                      {}
+                    ]
+                  },
+                  "output": {
+                    "type": "object",
+                    "description": "%teamstoolkit.taskDefinitions.args.output.title%",
+                    "properties": {
+                      "domain": {
+                        "type": "string",
+                        "description": "%teamstoolkit.taskDefinitions.args.output.domain.title%"
+                      },
+                      "endpoint": {
+                        "type": "string",
+                        "description": "%teamstoolkit.taskDefinitions.args.output.endpoint.title%"
+                      },
+                      "id": {
+                        "type": "string",
+                        "description": "%teamstoolkit.taskDefinitions.args.output.id.title%"
                       }
                     }
                   }
