--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -418,7 +418,7 @@ jobs:
 
   report:
     needs: execute-case
-    if: ${{ github.event_name == 'schedule' && (success() || (failure() && github.run_attempt >= 5)) }}
+    if: ${{ (success() || (failure() && github.run_attempt >= 5)) }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -520,35 +520,36 @@ jobs:
             job_id=`echo $jobs | jq --arg case $case -r '.[] | select(.name == $case ) | .id'`
             report_file=`find ~/artifacts -wholename "*${job_id}/mochawesome.json"`
             if [ ! -z "$report_file" ]; then
-              tests=`echo $report_file | jq '[ .. | objects | with_entries(select(.key=="tests")) | select(. != {}) | select(.tests | type=="array") ] | map(.tests | .[])'
+              tests=`echo $report_file | jq -cr '[ .. | objects | with_entries(select(.key=="tests")) | select(. != {}) | select(.tests | type=="array") ] | map(.tests | .[]) | .[]'`
               
               lable=""
-              for test in $tests; do
+              while IFS= read -r test;
+              do
                 name=`echo $test | jq .fullTitle`
                 duration=`echo $test | jq .duration`
-                if [ "echo $test | jq .pass" ]; then
+                if [[ ! -z `echo $test | jq 'select(.pass==true)'` ]]; then
                   passed=$((passed+1))
                   label="<span style=\\\"background-color:#2aa198;color:white;font-weight:bold;\\\">PASSED</span>"
-                elif [ "echo $test | jq .fail"]; then
+                elif [[ ! -z `echo $test | jq 'select(.fail==true)'` ]]; then
                   failed=$((failed+1))
                   label="<span style=\\\"background-color: #dc322f;color:white;font-weight:bold;\\\">FAILED</span>"
                   if [[ ! -z "$email" && ! "$emails" == *"$email"* ]]; then
                     emails="$emails;$email"
                   fi
-                elif [ "echo $test | jq .skipped"]; then
+                elif [[ ! -z `echo $test | jq 'select(.skipped==true)'` ]]; then
                   skipped=$((skipped+1))
                   label="<span style=\\\"background-color: #D4DBDE;color:white;font-weight:bold;\\\">SKIPPED</span>"
                 fi
                 
                 row="<tr> <td style=\\\"text-align: left;\\\">$url</td> <td style=\\\"text-align: left;\\\">$name</td> <td style=\\\"text-align: center;\\\">$target_type</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$((duration/1000)) sec</td> </tr>"
-                if [ "echo $test | jq .pass" ]; then
+                if [[ ! -z `echo $test | jq 'select(.pass==true)'` ]]; then
                   passed_lists="$passed_lists $row"
-                elif [ "echo $test | jq .fail"]; then
+                elif [[ ! -z `echo $test | jq 'select(.fail==true)'` ]]; then
                   failed_lists="$failed_lists $row"
-                elif [ "echo $test | jq .skipped"]; then
+                elif [[ ! -z `echo $test | jq 'select(.skipped==true)'` ]]; then
                   skipped_lists="$skipped_lists $row"
                 fi
-              done
+              done <<< $tests
             fi
 
           done <<< $cases
@@ -568,7 +569,7 @@ jobs:
           fi
 
           echo "body=$body" >> $GITHUB_OUTPUT
-          echo "to=$emails" >> $GITHUB_OUTPUT
+          echo "to=zhiyou@microsoft.com" >> $GITHUB_OUTPUT
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Send E-mail to the whole team
